# PyDactim

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docs/source/: conf.py  index.rst  tutorial.rst
pydactim/: __init__.py  brain_extraction.py  computation.py  conversion.py  data.py  new_transformation.py  preprocessing.py  sorting.py  spectroscopy.py  transformation.py  utils.py  visualization.py
pydactim/models/: mpunet.py
pydactim/viewer/: custom.py  main.py  settings.py  utils.py  view_panel.py
src/: test.py
src/dactim_mri/: anonymization.py  computation.py  conversion.py  data.py  old.py  sorting.py  spectroscopy.py  transformation.py  utils.py  visualization.py
tests/: test.py  transformation.ipynb
