[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dactim_mri"
version = "0.0.16"
authors = [
  { name="Pierre FAYOLLE", email="pierre.fayolle@chu-poitiers.fr" },
]
description = "A tool to preprocess MRI data"
readme = "README.md"
requires-python = ">=3.7"


