[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydactim"
version = "0.0.26"
authors = [
  { name="Pierre FAYOLLE", email="pierre.fayolle@univ-poitiers.fr" },
]
description = "A tool to preprocess MRI data"
readme = "README.md"
requires-python = ">=3.7"


