[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydactim"
version = "0.0.27"
authors = [
  { name="Pierre FAYOLLE", email="pierre.fayolle@univ-poitiers.fr" },
]
description = "A tool to preprocess MRI data"
readme = "README.md"
requires-python = ">=3.7"


[project.urls]
documentation = "https://pydactim.readthedocs.io/en/latest/"
source = "https://github.com/PierreFayolle/PyDactim"
download = "https://pypi.org/project/PyDactim/#files"
tracker = "https://github.com/PierreFayolle/PyDactim/issues"